* all conf files are optional * added default font resource compiled into binary * added compile time switch for setting default font * removed slicker.ttf as default font (restrictive license)

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,5 @@
 SUBDIRS = src
 MAINTAINERCLEANFILES = Makefile.in aclocal.m4 configure
 
-pkgdata_DATA = slicker.ttf lemonlauncher.conf games.conf
+pkgdata_DATA = lemonlauncher.conf games.conf
 EXTRA_DIST = $(pkgdata_DATA)
