--- a/lemonlauncher.conf
+++ b/lemonlauncher.conf
@@ -4,14 +4,14 @@ loglevel = 4
 ## Screen options
 width = 640
 height = 480
-bitdepth = 32
+bitdepth = 24
 fullscreen = false
 
 ## Mame options
-path = "/Users/josh/sdlmame0118-intel-nodebug/mamepm"
-params = "-rompath /Users/josh/sdlmame0118-intel-nodebug/roms\
-          -snapshot_directory /Users/josh/sdlmame0118-intel-nodebug/snap"
-snaps = "/Users/josh/sdlmame0118-intel-nodebug/snap"
+path = "mame"
+params = "-rompath /usr/share/games/sdlmame/roms\
+          -snapshot_directory /usr/share/games/sdlmame/snap"
+snaps = "usr/share/games/sdlmame/snap"
 
 ## Ui options
 font = "slicker.ttf"
