--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,5 +2,17 @@ MAINTAINERCLEANFILES = Makefile.in
 
 INCLUDES = -I$(top_srcdir) -I$(top_builddir)
 
+noinst_PROGRAMS = bin2c
+bin2c_SOURCES = bin2c.c
+
+BUILT_SOURCES = default_font.h
+CLEANFILES = default_font.h
+
+default_font.h: bin2c
+	$(srcdir)/bin2c default_font <$(DEFAULT_FONT) >default_font.h
+
 bin_PROGRAMS = lemonlauncher
 lemonlauncher_SOURCES = lemonlauncher.cpp lemonmenu.cpp options.cpp log.cpp
+
+noinst_HEADERS = lemonmenu.h options.h log.h error.h
+
