* updated README file * removed unused snapshot feature * updated default config files * added keycodes.txt to list of package data files * added font file to list of dist files

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,5 @@
 SUBDIRS = src
 MAINTAINERCLEANFILES = Makefile.in aclocal.m4 configure
 
-pkgdata_DATA = lemonlauncher.conf games.conf
-EXTRA_DIST = $(pkgdata_DATA)
+pkgdata_DATA = lemonlauncher.conf games.conf keycodes.txt
+EXTRA_DIST = $(pkgdata_DATA) VeraBd.ttf
