--- a/games.conf
+++ b/games.conf
@@ -3,37 +3,23 @@
 # parsing the game list file.  On a possitive note, the file is validated and
 # it's extensible (within the limitations of libConfuse syntax).
 #
-# Menu nesting is NOT supported.  Parent/child menus are supported, but menu
-# blocks must be defined outside of other menu blocks (use submenu option).
+# Menu nesting is NOT supported at this time.
 #
-# This file is parsed top down.  If you would like to include one menu as a
-# child of another, you must be sure the child menu comes before the parent.
-#
-# To hide a menu or a game, prefix the game title or the menu title with a '.'
+# This file is parsed top down.  Create one or more menu blocks and include
+# one ore more game blocks as children.  To hide a menu or a game, prefix the
+# game title or the menu title with a '.'
 #
 # Example:
 #
-# menu menu2 {
+# menu "My Games" {
 #   ...
-#   # rom: required:    rom file name
-#   # title: required:  friendly game name
+#   # rom:    required: rom file name
+#   # title:  required: friendly game name
 #   # params: optional: extra command line parameters
 #   game { rom = abc123 title = "The abc 123 game" params = "-full" }
 #   game { rom = def456 title = "The def 456 game" }
 # }
 #
-# menu menu3 {
-#   title = ".Hidden menu"
-#   ...
-# }
-#
-# menu menu1 {                 # menu id: any one word identifier (required)
-#   title = "Menu title"       # title:   friendly menu name (required)
-#   submenu = { menu2, menu3 } # (optional) comma delimited list of menu id's
-# }
-#
-
-# root "Arcade Games" {
 
 menu ".Adult Games" {
   game { rom = "sxyreact" title = "Pachinko Sexy Reaction" }
@@ -153,5 +139,3 @@ menu "Platform Games" {
   game { rom = "shinobi" title = "Shinobi" }
   game { rom = "wboy" title = "Wonder Boy" }
 }
-
-# }
