--- a/lemonlauncher.conf
+++ b/lemonlauncher.conf
@@ -11,38 +11,36 @@ fullscreen = false
 path = "mame"
 params = "-rompath /usr/share/games/sdlmame/roms\
           -snapshot_directory /usr/share/games/sdlmame/snap"
-snaps = "usr/share/games/sdlmame/snap"
+snaps = "/usr/share/games/sdlmame/snap"
 
 ## Ui options
-font = "slicker.ttf"
-title_height = 40 # height of title font
-title_color  = 0xefefef
-list_height  = 28 # height of list entry font
+font = "/usr/share/lemonlauncher/slicker.ttf"
+title_height = 40        # height of title font
+title_color  = 0xefefef  # color of title font
+list_height  = 28        # height of list entry font
 menu_color = 0xc2f4ff
 menu_hover_color = 0x32E4ff
 game_color = 0xefefef
 game_hover_color = 0xffe432
 snapshot_alpha = 0xc8 # amount to fade game snapshots (0x00 - 0xff)
-# delay in miliseconds before displaying game snapshot
-snapshot_delay = 500
-page_size = 15 # number of list items to skip in pageup/down
+snapshot_delay = 500  # delay in miliseconds before displaying game snapshot
+page_size = 15        # number of list items to skip in pageup/down
 
 ## Key mapping
-exit = 27
-snap = 49
-reload = 50
-showhide = 51
+exit = 27       # escape
+reload = 49     # 1
+showhide = 50   # 2
 
-p1up = 273
-p1down = 274
-p1pgup = 275
-p1pgdown = 276
-p1button1 = 306
-p1button2 = 304
+p1up = 273      # up
+p1down = 274    # down
+p1pgup = 275    # left
+p1pgdown = 276  # right
+p1button1 = 306 # left ctrl
+p1button2 = 308 # left alt
 
-p2up = 114
-p2down = 102
-p2pgup = 100
-p2pgdown = 103
-p2button1 = 97
-p2button2 = 119
+p2up = 114      # r
+p2down = 102    # f
+p2pgup = 100    # d
+p2pgdown = 103  # g
+p2button1 = 97  # a
+p2button2 = 115 # s
