--- a/configure.in
+++ b/configure.in
@@ -21,7 +21,7 @@ AC_CXX_HAVE_STL
 # set config file directory
 AC_ARG_WITH([confdir],
   AC_HELP_STRING([--with-confdir=DIR], [Where to find conf files ($HOME/.lemonlauncher)]),
-  AC_DEFINE_UNQUOTED(HAVE_CONF_DIR, $withval, [Define to the directory of conf files]))
+  AC_DEFINE_UNQUOTED(HAVE_CONF_DIR, "$withval", [Define to the directory of conf files]))
 
 ###########################################################
 # set default ttf font file
