added menu sorting in alphabetic order (enabled by default) removed the double mapping of controls for certain functions added alphabetic page up/down control changed around key mapping option names to reflect their logical use

--- a/games.conf.sample
+++ b/games.conf.sample
@@ -12,6 +12,8 @@
 # Example:
 #
 # menu "My Games" {
+#   # sorted: optional: sort games alphabetically (defaults to true)
+#   sorted = true|false
 #   ...
 #   # rom:    required: rom file name
 #   # title:  required: friendly game name
