changed wording of skin to theme

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,6 +2,6 @@ SUBDIRS = src
 MAINTAINERCLEANFILES = Makefile.in aclocal.m4 configure
 
 pkgdata_DATA = lemonlauncher.conf.sample games.conf.sample keycodes.txt \
-skin.conf.sample grey-skin.tar.gz blue-theme.tar.gz
+theme.conf.sample grey-theme.tar.gz blue-theme.tar.gz
 
 EXTRA_DIST = $(pkgdata_DATA) VeraBd.ttf
