small fix in automake template to allow separate build dir

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -9,7 +9,7 @@ BUILT_SOURCES = default_font.h
 CLEANFILES = default_font.h
 
 default_font.h: bin2c
-	$(srcdir)/bin2c default_font <$(DEFAULT_FONT) >default_font.h
+	./bin2c default_font <$(DEFAULT_FONT) >default_font.h
 
 bin_PROGRAMS = lemonlauncher
 lemonlauncher_SOURCES = lemonlauncher.cpp lemonmenu.cpp lemonui.cpp \
